[package]
name = "pub-sub"
version = "2.0.0"

exclude = [".docs-vc-link.js", ".gitlab-ci.yml"]

authors = ["creato"]
description = "A basic publish/subscribe channel."
documentation = "https://creato.gitlab.io/pub-sub"
repository = "https://gitlab.com/creato/pub-sub"
readme = "README.md"
license = "MIT/LGPL-3.0"

[dependencies]
uuid = { version = "^0", features = ["v4"] }
